Combined all game files into each respective html file. Changed I frame styling.

--- a/games/Ping_Pong/index.html
+++ b/games/Ping_Pong/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ze PingPong Game">
     <meta name="keywords" content="PingPong, game">
-    <link rel="stylesheet" type="text/css" href="PingPong.css">
+    <!-- <link rel="stylesheet" type="text/css" href="PingPong.css"> -->
     <title>PingPong by Cobra Arcade</title>
 </head>
 <style>
@@ -267,6 +267,6 @@ function print_arrow_key(keyCodeNumber) {
             </div>
         </div>   
     </div>
-    <script src="PingPong.js"></script>
+    <!-- <script src="PingPong.js"></script> -->
 </body>
 </html>
