--- a/games/snake/snake.html
+++ b/games/snake/snake.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Snake by Cobra Arcade</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <!-- main code from -->
 <!-- https://www.html5canvastutorials.com/advanced/html5-canvas-snake-game/ -->
@@ -480,7 +480,7 @@ h1 {
     window.onresize = resize;
   </script>
 
-  <script src="game.js"></script>
+  <!-- <script src="game.js"></script> -->
 </body>
 
 </html>
