--- a/games/snake/snake.html
+++ b/games/snake/snake.html
@@ -9,7 +9,7 @@
 </head>
 <!-- main code from -->
 <!-- https://www.html5canvastutorials.com/advanced/html5-canvas-snake-game/ -->
-<!-- <script>
+<script>
   (function() {
   //multiple functions use these variabless
   var canvas;
@@ -219,7 +219,7 @@
 })();
 </script> -->
 
-<!-- <style>
+<style>
 @import url("https://fonts.googleapis.com/css?family=VT323");
 ::selection {
   color: #FFFFFF;
@@ -417,7 +417,7 @@ h1 {
   color: #000;
 }
 
-</style> -->
+</style>
 
 <body>
   <header class="wrap">
