--- a/games/Flappy_Bird/index.html
+++ b/games/Flappy_Bird/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Flappy Bird by Cobra Arcade</title>
-    <link href="https://fonts.googleapis.com/css?family=Teko:700" rel="stylesheet">
-    <style>        
-        canvas{
-            border: 1px solid #000;
-            display: block;
-            margin: 0 auto;
-        }
-    </style>
-</head>
-<body>
-    <canvas id="bird" width="320" height="480"></canvas>
 
-    <script src="game.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <title>Flappy Bird by Cobra Arcade</title>
+  <link href="https://fonts.googleapis.com/css?family=Teko:700" rel="stylesheet">
+  <style>
+    canvas {
+      border: 1px solid #000;
+      display: block;
+      margin: 0 auto;
+    }
+  </style>
+</head>
+
+<body>
+  <canvas id="bird" width="320" height="480"></canvas>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+  <script src="game.js"></script>
 </body>
+
 </html>
